# misc

./: Linux_privilege_escalation.ctb  README.md
os-stuff/linux/: deactivate cloud-init.txt  domäne_beitreten.ctb  fstab  helpful_bashrc_variables  system-resolved.txt
os-stuff/linux/Systemadministration/: add_user_to_group.txt  adjust_timezone.txt  adjust_timezone_when_windows_dual_boot.txt  copy_windows_to_new_hdd.txt  domäne_beitreten.ctb  find_all_packages.txt  locales_keyboard.txt  mount_smb_manually.sh  netplan.txt
os-stuff/linux/Systemadministration/domain_join/: CMakeLists.txt  dj_mkhomedir.conf  domain_join.sh  domain_leave.sh  krb5.conf.unconfigured  mkhomedir  postinst  postrm  preinst  prerm  realmd.conf  test2.sh  timesyncd.conf
os-stuff/linux/Systemadministration/setup/: install_desktop_packages.sh
os-stuff/linux/backup-scripts/: 98-usb-backup.rules
os-stuff/linux/backup_rsync_remote/: README
os-stuff/linux/cifs_samba_server_config/: smb.conf
os-stuff/linux/nextcloud/: nextcloud_backup.sh
os-stuff/linux/old/backup-scripts/: usb-backup-script.sh  usb-backup.sh
os-stuff/linux/old/backup_rsync_remote/: backup_rsync_remote
os-stuff/linux/old/rsync_mobile_hdd/: backup_desktop_to_mobile_disk.sh  restore_from_mobile_disk_to_desktop.sh
os-stuff/linux/rsync_mobile_hdd/: restore_from_mobile_disk_to_desktop.sh
os-stuff/linux/rsync_to_local_backup_hdd/: README  backup
os-stuff/windows/server/: auto_update.txt  script_power_off.txt
py2dsc/: README
